--- a/configs/evaluate/pii-extraction.yml
+++ b/configs/evaluate/pii-extraction.yml
@@ -6,17 +6,19 @@ dataset_args:
 
 attack_args:
   attack_name: naive_extraction
-  sampling_rate: 100
-  seq_len: 128
+  sampling_rate: 15000
+  seq_len: 256
 
 model_args:
   architecture: gpt2
   pre_trained: True
-  model_ckpt: ../echr2_undefended # Edit this path to try your own model.
+  model_ckpt: ../echr_undefended # Edit this path to try your own model.
 
 ner_args:
   ner: flair
   ner_model: flair/ner-english-ontonotes-large
   anon_token: <MASK>
   anonymize: False
-  tag_n_batches: 10_000
+
+env_args:
+  eval_batch_size: 64
