--- a/configs/fine-tune/echr-gpt2-small-dp8.yml
+++ b/configs/fine-tune/echr-gpt2-small-dp8.yml
@@ -6,15 +6,16 @@ dataset_args:
   sample_duplication_rate: 1
 
 trainer_args:
-  save_steps: 750
-  callback_after_n_steps: 750
+  save_steps: 1000
+  callback_after_n_steps: 1000
   num_train_epochs: 4
   gradient_accumulation_steps: 4
-  per_device_train_batch_size: 8
-  per_device_eval_batch_size: 8
+  per_device_train_batch_size: 16
+  per_device_eval_batch_size: 16
 
 privacy_args:
   target_epsilon: 8
+  max_grad_norm_dp: 1.0
 
 model_args:
   architecture: gpt2
